Fixes to new api